Modificando pared invisible

--- a/portafolio3.html
+++ b/portafolio3.html
@@ -19,7 +19,7 @@
         </h2>
         <h2>
           Neocities:
-          <a href="https://www.wikipedia.com/" target="_blank">Wiki</a>
+          <a href="https://programacionweb937.neocities.org" target="_blank">Neocities</a>
         </h2>
       </section>
     </header>
