--- a/portafolio3.html
+++ b/portafolio3.html
@@ -8,6 +8,7 @@
     <title>Protafolio programacion web</title>
   </head>
   <body>
+    <!--Body-->
     <img src="iueimagen.jpeg" alt="fondo" class="fondo" />
     <header>
       <h1>Julian Andres Vallejo Londoño</h1>
