--- a/miportafolio.html
+++ b/miportafolio.html
@@ -20,7 +20,7 @@
         </li>
         <li>
           Neocities:
-          <a href="https://www.wikipedia.com/" target="_blank">Neocities</a>
+          <a href="https://programacionweb937.neocities.org" target="_blank">Neocities</a>
         </li>
       </ul>
     </header>
