Agregando ejercicios de JS al portafolio
Agregando ejercicios de JS al portafolio

--- a/miportafolio.html
+++ b/miportafolio.html
@@ -77,7 +77,7 @@
               <li><a href="tabla.html">Tabla,formularios y multimedia</a></li>
               <li><a href="hojadevida.html">Hoja De Vida</a></li>
               <li><a href="disenoresponsive3.html">Responsive</a></li>
-              <li><a href="#">Artículo 4</a></li>
+              <li><a href="ejerciciosJS.html">Ejercicio JS</a></li>
               <li><a href="#">Artículo 5</a></li>
             </ul>
           </div>
