--- a/miportafolio.html
+++ b/miportafolio.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Mi Portafolio</title>
-        <link rel="stylesheet" href="estilo.css">
+        <link rel="stylesheet" href="assets/css/estilo.css">
       </head>
   <body>
     <header>
