--- a/reto.html
+++ b/reto.html
@@ -14,8 +14,8 @@
 
     <title>Frontend Mentor | News homepage</title>
 
-    <link rel="stylesheet" href="estiloreto.css" />
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="assets/css/estiloreto.css" />
+    
   </head>
   <body>
     <header>
@@ -112,5 +112,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="https://github.com/Julio937">Julian Vallejo</a>.
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
