--- a/tabla.html
+++ b/tabla.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="tabla.css" />
+    <link rel="stylesheet" href="assets/css/tabla.css" />
     <title>Tablas,forms y multimedia</title>
   </head>
   <body>
