--- a/registroSnack.html
+++ b/registroSnack.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <header>
-      <h1>Snack Conference 2022</h1>
+      <img src="assets/images/logoSnack.webp" alt="logotipo" />
+      <div class="titulo">
+        <h1>Snack Conference 2022</h1>
+        <p>¡El evento de snacks más grande del año!</p>
+      </div>
     </header>
 
     <section>
@@ -21,7 +25,7 @@
         <input type="text" id="apellido" name="apellido" required />
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
+        <input type="email" id="email" name="email" placeholder="ejemplo@dominio.com" required />
 
         <input type="submit" value="Enviar" class="btn" />
       </form>
