Ultimas modificaciones Snack

--- a/miportafolio.html
+++ b/miportafolio.html
@@ -85,7 +85,7 @@
             <h3>Retos</h3>
             <ul>
               <li><a href="reto.html">Reto News Web</a></li>
-              <li><a href="#">Artículo 2</a></li>
+              <li><a href="snackConference.html">Snack Conference 2022</a></li>
               <li><a href="#">Artículo 3</a></li>
               <li><a href="#">Artículo 4</a></li>
               <li><a href="#">Artículo 5</a></li>
