--- a/miportafolio.html
+++ b/miportafolio.html
@@ -56,7 +56,13 @@
                 href="https://www.figma.com/file/E722z3JXhbjyvZ3VkIGTwR/Untitled?node-id=0%3A1&t=BpROyvFZb5rPezwi-1"
                 target="_blank"
                 >Diseño Portafolio</a</li>
-              <li><a href="#">Artículo 3</a></li>
+              <li>
+                <a 
+                href="https://www.figma.com/file/ByC1O30dMrTyEU9kmONNac/Snack-Conference-2022?type=design&node-id=0%3A1&t=V7hyDNr2SiQhKGSs-1" 
+                target="_blank"
+                >Diseño Snack Conference</a
+                >
+              </li>
               <li><a href="#">Artículo 4</a></li>
               <li><a href="#">Artículo 5</a></li>
             </ul>
