--- a/consulta1.html
+++ b/consulta1.html
@@ -69,6 +69,6 @@
       </li>
     </ul>
     <hr />
-    <section class="volver"><a href="portafolio3.html">Volver</a></section>
+    <section class="volver"><a href="miportafolio.html">Volver</a></section>
   </body>
 </html>
