Implementando el taller ApiFetch

--- a/miportafolio.html
+++ b/miportafolio.html
@@ -84,7 +84,7 @@
               <li><a href="hojadevida.html">Hoja De Vida</a></li>
               <li><a href="disenoresponsive3.html">Responsive</a></li>
               <li><a href="ejerciciosJS.html">Ejercicio JS</a></li>
-              <li><a href="#">Artículo 5</a></li>
+              <li><a href="catalogo.html">Taller Api Fetch</a></li>
             </ul>
           </div>
           <div class="article">
