Cambiando miportafolio.html por index.html

--- a/consulta2.html
+++ b/consulta2.html
@@ -48,6 +48,6 @@
       contenido de las páginas web de forma dinámica y programática.
     </p>
     <hr />
-    <section class="volver"><a href="miportafolio.html">Volver</a></section>
+    <section class="volver"><a href="index.html">Volver</a></section>
   </body>
 </html>
