--- a/consulta3.html
+++ b/consulta3.html
@@ -53,6 +53,6 @@
       realizar mejoras para aumentar su rendimiento.<br /><br />
     </p>
     <hr />
-    <section class="volver"><a href="miportafolio.html">Volver</a></section>
+    <section class="volver"><a href="index.html">Volver</a></section>
   </body>
 </html>
