--- a/hojadevida.html
+++ b/hojadevida.html
@@ -129,7 +129,7 @@
         </section>
       </main>
       <hr>
-      <section class="volver"><a  href="portafolio3.html">Volver</a></section>
+      <section class="volver"><a  href="index.html">Volver</a></section>
      
     </div>
   </body>
