--- a/reto.html
+++ b/reto.html
@@ -23,8 +23,8 @@
 
       <div class="menu">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="new.html">New</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">New</a></li>
           <li><a href="#">Popular</a></li>
           <li><a href="#">Trending</a></li>
           <li><a href="#">Categories</a></li>
