--- a/snackConference.html
+++ b/snackConference.html
@@ -13,7 +13,7 @@
         <h1>Snack Conference 2022</h1>
         <p>¡El evento de snacks más grande del año!</p>
       </div>
-      <a href="miportafolio.html">Volver</a>
+      <a href="index.html">Volver</a>
     </header>
 
     <section>
