--- a/tabla.html
+++ b/tabla.html
@@ -151,6 +151,6 @@
       ></iframe>
     </section>
     <hr>
-    <section class="volver"><a  href="portafolio3.html">Volver</a></section>
+    <section class="volver"><a  href="index.html">Volver</a></section>
   </body>
 </html>
