--- a/ejerciciosJS.html
+++ b/ejerciciosJS.html
@@ -1,24 +1,29 @@
-<!-- Creando el hmlt con los botones para llamar las 10 funciones de los diferentes ejercicios dentro del archivo ejercicios.js -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejericicios JS</title>
+    <title>Ejercicios JS</title>
+    <link rel="stylesheet" href="assets/css/ejeciciosjs.css">
 </head>
 <body>
-    <h1>Ejercicios JS</h1>
-    <button onclick="ejercicio1()">Ejercicio 1</button>
-    <button onclick="ejercicio2()">Ejercicio 2</button>
-    <button onclick="ejercicio3()">Ejercicio 3</button>
-    <button onclick="ejercicio4()">Ejercicio 4</button>
-    <button onclick="ejercicio5()">Ejercicio 5</button>
-    <button onclick="ejercicio6()">Ejercicio 6</button>
-    <button onclick="ejercicio7()">Ejercicio 7</button>
-    <button onclick="ejercicio8()">Ejercicio 8</button>
-    <button onclick="ejercicio9()">Ejercicio 9</button>
-    <button onclick="ejercicio10()">Ejercicio 10</button>
-    <script src="ejercicios.js"></script>
+    <div class="titulo">
+        <h1>Ejercicios JS</h1>
+    </div>
+    <div id="resultado"></div>
+    <div class="button-container">
+        <button onclick="ejercicio1()">Ejercicio 1</button>
+        <button onclick="ejercicio2()">Ejercicio 2</button>
+        <button onclick="ejercicio3()">Ejercicio 3</button>
+        <button onclick="ejercicio4()">Ejercicio 4</button>
+        <button onclick="ejercicio5()">Ejercicio 5</button>
+        <button onclick="ejercicio6()">Ejercicio 6</button>
+        <button onclick="ejercicio7()">Ejercicio 7</button>
+        <button onclick="ejercicio8()">Ejercicio 8</button>
+        <button onclick="ejercicio9()">Ejercicio 9</button>
+        <button onclick="ejercicio10()">Ejercicio 10</button>
+    </div>
+    <script src="assets/js/ejercicios.js"></script>
 </body>
 </html>
