Implementaciones responsive y css

--- a/consulta1.html
+++ b/consulta1.html
@@ -5,70 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Consulta 1</title>
-    <style>
-      h2 {
-        text-align: center;
-      }
-      li {
-        padding: 5px;
-      }
-      .volver {
-        padding: 10px;
-        margin: auto;
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" href="assets/css/consultas.css" />
   </head>
   <body>
-    <h2>Protocolos</h2>
-    <ul>
-      <li>
-        <b> HTTP: </b> El Protocolo de Transferencia de Hipertexto (HTTP) es un
-        protocolo de aplicación que se utiliza para transmitir datos en la World
-        Wide Web (WWW). HTTP define cómo los mensajes son formulados y
-        transmitidos, y cómo los servidores y clientes interactúan entre sí.
-      </li>
-      <li>
-        <b> TCP/IP: </b> El Protocolo de Control de Transmisión/Protocolo de
-        Internet (TCP/IP) es el conjunto de protocolos de red que se utiliza
-        para conectar dispositivos en internet. TCP/IP se divide en cuatro
-        capas, cada una con su propia funcionalidad: la capa de aplicación, la
-        capa de transporte, la capa de Internet y la capa de acceso a la red.
-      </li>
-      <li>
-        <b> DNS: </b> El Sistema de Nombres de Dominio (DNS) es un protocolo que
-        se utiliza para traducir nombres de dominio en direcciones IP. Cuando se
-        introduce un nombre de dominio en un navegador web, el navegador utiliza
-        DNS para buscar la dirección IP asociada con ese nombre de dominio y
-        luego conectarse a ese servidor web.
-      </li>
-      <li>
-        <b> CDN: </b> Una Red de Distribución de Contenido (CDN) es una red de
-        servidores distribuidos geográficamente que se utilizan para entregar
-        contenido web de manera más rápida y confiable. Los servidores CDN
-        almacenan copias en caché del contenido web y las entregan a los
-        usuarios desde el servidor CDN más cercano a ellos.
-      </li>
-      <li>
-        <b> WWW: </b> La World Wide Web (WWW) es un sistema de información
-        basado en hipertexto que se utiliza para acceder a información en
-        internet. La WWW se compone de una serie de páginas web interconectadas
-        que se pueden acceder mediante hipervínculos.
-      </li>
-      <li>
-        <b> FTP: </b> El Protocolo de Transferencia de Archivos (FTP) es un
-        protocolo que se utiliza para transferir archivos entre un cliente y un
-        servidor a través de una red. FTP se utiliza comúnmente para subir y
-        descargar archivos en servidores web.
-      </li>
-      <li>
-        <b> HTML: </b> El Lenguaje de Marcado de Hipertexto (HTML) es el
-        lenguaje utilizado para crear páginas web en la World Wide Web. HTML
-        define la estructura y el contenido de una página web mediante el uso de
-        etiquetas y atributos.
-      </li>
-    </ul>
-    <hr />
-    <section class="volver"><a href="index.html">Volver</a></section>
+    <header>
+      <h2>Protocolos</h2>
+    </header>
+    <main>
+      <div class="consulta-container">
+        <ul>
+          <li>
+            <b> HTTP: </b> El Protocolo de Transferencia de Hipertexto (HTTP) es
+            un protocolo de aplicación que se utiliza para transmitir datos en
+            la World Wide Web (WWW). HTTP define cómo los mensajes son
+            formulados y transmitidos, y cómo los servidores y clientes
+            interactúan entre sí.
+          </li>
+          <li>
+            <b> TCP/IP: </b> El Protocolo de Control de Transmisión/Protocolo de
+            Internet (TCP/IP) es el conjunto de protocolos de red que se utiliza
+            para conectar dispositivos en internet. TCP/IP se divide en cuatro
+            capas, cada una con su propia funcionalidad: la capa de aplicación,
+            la capa de transporte, la capa de Internet y la capa de acceso a la
+            red.
+          </li>
+          <li>
+            <b> DNS: </b> El Sistema de Nombres de Dominio (DNS) es un protocolo
+            que se utiliza para traducir nombres de dominio en direcciones IP.
+            Cuando se introduce un nombre de dominio en un navegador web, el
+            navegador utiliza DNS para buscar la dirección IP asociada con ese
+            nombre de dominio y luego conectarse a ese servidor web.
+          </li>
+          <li>
+            <b> CDN: </b> Una Red de Distribución de Contenido (CDN) es una red
+            de servidores distribuidos geográficamente que se utilizan para
+            entregar contenido web de manera más rápida y confiable. Los
+            servidores CDN almacenan copias en caché del contenido web y las
+            entregan a los usuarios desde el servidor CDN más cercano a ellos.
+          </li>
+          <li>
+            <b> WWW: </b> La World Wide Web (WWW) es un sistema de información
+            basado en hipertexto que se utiliza para acceder a información en
+            internet. La WWW se compone de una serie de páginas web
+            interconectadas que se pueden acceder mediante hipervínculos.
+          </li>
+          <li>
+            <b> FTP: </b> El Protocolo de Transferencia de Archivos (FTP) es un
+            protocolo que se utiliza para transferir archivos entre un cliente y
+            un servidor a través de una red. FTP se utiliza comúnmente para
+            subir y descargar archivos en servidores web.
+          </li>
+          <li>
+            <b> HTML: </b> El Lenguaje de Marcado de Hipertexto (HTML) es el
+            lenguaje utilizado para crear páginas web en la World Wide Web. HTML
+            define la estructura y el contenido de una página web mediante el
+            uso de etiquetas y atributos.
+          </li>
+        </ul>
+      </div>
+      <hr />
+      <section class="volver"><a href="index.html">Volver</a></section>
+    </main>
   </body>
 </html>
