--- a/consulta3.html
+++ b/consulta3.html
@@ -5,22 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Consulta 3</title>
-    <style>
-      h2 {
-        text-align: center;
-      }
-      li {
-        padding: 5px;
-      }
-      .volver {
-        padding: 10px;
-        margin: auto;
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" href="assets/css/consultas.css" />
   </head>
   <body>
+    <header>
     <h2>Landing page</h2>
+  </header>
+  <main>
+    <div class="consulta-container">
     <p>
       Una landing page (página de destino) es una página web diseñada
       específicamente para recibir y convertir visitantes en clientes
@@ -52,7 +44,9 @@
       a los especialistas en marketing evaluar la efectividad de la página y
       realizar mejoras para aumentar su rendimiento.<br /><br />
     </p>
+  </div>
     <hr />
     <section class="volver"><a href="index.html">Volver</a></section>
+  </main>
   </body>
 </html>
