--- a/hojadevida.html
+++ b/hojadevida.html
@@ -1,80 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hoja de Vida</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f0f0f0;
-      }
-
-      .container {
-        position: relative;
-        max-width: 800px;
-        margin: 0 auto;
-        padding: 20px;
-        background-color: #fff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-      }
-
-      .image-container {
-        position: absolute;
-        top: 0;
-        right: 0;
-        margin: 10px; /* Ajusta el margen según sea necesario */
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-        overflow: hidden;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-      }
-
-      .image-container img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-      h1 {
-        margin-top: 0;
-        text-align: center;
-        color: #333;
-      }
-
-      h2 {
-        color: #333;
-      }
-
-      p {
-        margin: 10px 0;
-        line-height: 1.5;
-        font-size: 16px;
-        color: #555;
-      }
-
-      ul {
-        margin: 10px 0;
-        padding-left: 20px;
-        list-style: disc;
-      }
-
-      ul li {
-        margin: 10px 0;
-        line-height: 1.5;
-        font-size: 16px;
-        color: #555;
-      }
-
-      .section {
-        margin-top: 30px;
-      }
-      
-      .volver{
-        padding: 10px;
-        margin: auto;
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" href="assets/css/hojadevida.css" />
   </head>
   <body>
     <div class="container">
