--- a/consulta3.html
+++ b/consulta3.html
@@ -9,44 +9,44 @@
   </head>
   <body>
     <header>
-    <h2>Landing page</h2>
-  </header>
-  <main>
-    <div class="consulta-container">
-    <p>
-      Una landing page (página de destino) es una página web diseñada
-      específicamente para recibir y convertir visitantes en clientes
-      potenciales o compradores. Es un elemento clave en las estrategias de
-      marketing digital y publicidad en línea. <br /><br />
+      <h2>Landing page</h2>
+    </header>
+    <main>
+      <div class="consulta-container">
+        <p>
+          Una landing page (página de destino) es una página web diseñada
+          específicamente para recibir y convertir visitantes en clientes
+          potenciales o compradores. Es un elemento clave en las estrategias de
+          marketing digital y publicidad en línea. <br /><br />
 
-      La landing page se crea con un propósito único, como promocionar un
-      producto, ofrecer un descuento, captar suscriptores para un boletín
-      informativo o invitar a los usuarios a registrarse en un evento. Su
-      objetivo principal es persuadir a los visitantes para que realicen una
-      acción específica, como completar un formulario, realizar una compra o
-      proporcionar su información de contacto. <br /><br />
+          La landing page se crea con un propósito único, como promocionar un
+          producto, ofrecer un descuento, captar suscriptores para un boletín
+          informativo o invitar a los usuarios a registrarse en un evento. Su
+          objetivo principal es persuadir a los visitantes para que realicen una
+          acción específica, como completar un formulario, realizar una compra o
+          proporcionar su información de contacto. <br /><br />
 
-      Una landing page efectiva suele tener un diseño limpio y atractivo, con
-      contenido relevante y convincente que destaque los beneficios de la
-      oferta. También suele tener un formulario de contacto o de registro bien
-      ubicado y llamadas a la acción (CTA) claras y prominentes que guíen a los
-      visitantes a tomar la acción deseada.<br /><br />
+          Una landing page efectiva suele tener un diseño limpio y atractivo,
+          con contenido relevante y convincente que destaque los beneficios de
+          la oferta. También suele tener un formulario de contacto o de registro
+          bien ubicado y llamadas a la acción (CTA) claras y prominentes que
+          guíen a los visitantes a tomar la acción deseada.<br /><br />
 
-      Además, una buena landing page está diseñada para ser fácilmente accesible
-      desde anuncios en línea, correos electrónicos o enlaces compartidos en
-      redes sociales. Esto significa que debe tener una carga rápida, ser
-      responsiva (adaptarse a diferentes dispositivos y tamaños de pantalla) y
-      estar optimizada para los motores de búsqueda.<br /><br />
+          Además, una buena landing page está diseñada para ser fácilmente
+          accesible desde anuncios en línea, correos electrónicos o enlaces
+          compartidos en redes sociales. Esto significa que debe tener una carga
+          rápida, ser responsiva (adaptarse a diferentes dispositivos y tamaños
+          de pantalla) y estar optimizada para los motores de búsqueda.<br /><br />
 
-      El rendimiento de una landing page se puede medir mediante métricas como
-      la tasa de conversión, es decir, el porcentaje de visitantes que realizan
-      la acción deseada en comparación con el total de visitantes. Esto permite
-      a los especialistas en marketing evaluar la efectividad de la página y
-      realizar mejoras para aumentar su rendimiento.<br /><br />
-    </p>
-  </div>
-    <hr />
-    <section class="volver"><a href="index.html">Volver</a></section>
-  </main>
+          El rendimiento de una landing page se puede medir mediante métricas
+          como la tasa de conversión, es decir, el porcentaje de visitantes que
+          realizan la acción deseada en comparación con el total de visitantes.
+          Esto permite a los especialistas en marketing evaluar la efectividad
+          de la página y realizar mejoras para aumentar su rendimiento.<br /><br />
+        </p>
+      </div>
+      <hr />
+      <section class="volver"><a href="index.html">Volver</a></section>
+    </main>
   </body>
 </html>
