--- a/A_RECICLAR/Acerca.html
+++ b/A_RECICLAR/Acerca.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header>
-      <div class="contenedor">
+      <div class="contenedor-header">
         <h1 class="" id="titulo">A'RECICLAR</h1>
         <input type="checkbox" id="menu-bar" />
         <label class="icon-menu" for="menu-bar"></label>
