--- a/A_RECICLAR/Alcance.html
+++ b/A_RECICLAR/Alcance.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header>
-      <div class="contenedor">
+      <div class="contenedor-header">
         <h1 class="" id="titulo">A'RECICLAR</h1>
 
         <input type="checkbox" id="menu-bar" />
