--- a/A_RECICLAR/index.html
+++ b/A_RECICLAR/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="contenedor">
+      <div class="contenedor-header">
         <h1 class="" id="titulo">A'RECICLAR</h1>
         <input type="checkbox" id="menu-bar" />
         <label class="icon-menu" for="menu-bar"></label>
