Actualizando la pagina responsive

--- a/A_RECICLAR/Objetivo.html
+++ b/A_RECICLAR/Objetivo.html
@@ -48,12 +48,13 @@
                 y guíe a la reutilización de los residuos orgánicos y elementos
                 reciclables.
               </p>
-              <article>
-                <img src="imagenes/general.jpg" />
-              </article>
+              
             </div>
 
             <div class="card" id="espe">
+              <article class="principal">
+                <img src="imagenes/general.jpg" />
+              </article>
               <h2>Objetivos Específicos</h2>
               <h3>Objetivo 1:</h3>
               <p>Llegar a cada hogar envigadeño.</p>
