--- a/A_RECICLAR/Alcance.html
+++ b/A_RECICLAR/Alcance.html
@@ -54,7 +54,6 @@
           <div class="centercolumn">
             <div class="Artículos">
               <h2>Alcance</h2>
-
               <p>
                 Crear una aplicación móvil en la cual, los recicladores del
                 municipio de Envigado (zona urbana) van a interactuar por medio
@@ -89,25 +88,33 @@
       <section id="vid">
         <div class="contenedor">
           <article>
-            <h3>H.U. 1</h3>
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <img src="imagenes/Hu1.png" style="width: 100%" />
+                <div class="text">
+                  Como conocedor de saberes en cuanto al reciclaje, quisiera
+                  poder ayudar a la comunidad que desconoce el como podría
+                  reciclar, para que mi comunidad aumente el nivel de reciclaje.
+                </div>
+              </div>
 
-            <img src="imagenes/Hu1.png" />
-            <p>
-              Como conocedor de saberes en cuanto al reciclaje, quisiera poder
-              ayudar a la comunidad que desconoce el como podría reciclar, para
-              que mi comunidad aumente el nivel de reciclaje.
-            </p>
-          </article>
+              <div class="mySlides fade">
+                <img src="imagenes/Hu3.jpg" style="width: 100%" />
+                <div class="text">
+                  Como cabeza de hogar, desearía poder tener comunicación con el
+                  reciclador de mi zona, para que el reciclaje no se pierda con
+                  la basura sino que él pudiera venir por el.
+                </div>
+              </div>
 
-          <article>
-            <h3>H.U. 3</h3>
-
-            <img src="imagenes/Hu3.jpg" />
-            <p>
-              Como cabeza de hogar, desearía poder tener comunicación con el
-              reciclador de mi zona, para que el reciclaje no se pierda con la
-              basura sino que él pudiera venir por el.
-            </p>
+              <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+              <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br />
+            <div style="text-align: center">
+              <span class="dot" onclick="currentSlide(1)"></span>
+              <span class="dot" onclick="currentSlide(2)"></span>
+            </div>
           </article>
         </div>
       </section>
@@ -144,5 +151,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/alcance.js"></script>
   </body>
 </html>
