Agregando ultimos estilos

--- a/A_RECICLAR/Acerca.html
+++ b/A_RECICLAR/Acerca.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="css/fontello.css" />
     <link rel="stylesheet" href="css/estilo.css" />
+    <link rel="stylesheet" href="css/Acerca.css" />
   </head>
   <body>
     <header>
@@ -51,7 +52,9 @@
         <div class="container container--flex" id="nosotros">
           <div class="column column--44">
             <h3 class="our-team__title">Julián Andrés Vallejo Londoño</h3>
-            <img src="imagenes/julio.jpeg" alt="" class="our-team__img" />
+            <a href="https://github.com/Julio937" target="_blank">
+              <img src="../Mi foto.PNG" alt="" class="our-team__img" />
+            </a>
             <h3>Diseñador / Tester / Programador</h3>
             <p class="our-team__txt">
               Soy un chico joven con muy buenas aspiraciones y curiosidad por
