--- a/A_RECICLAR/Leer.html
+++ b/A_RECICLAR/Leer.html
@@ -47,7 +47,7 @@
                 botar plásticos, latas y vidrios, que pueden tardar muchos años
                 —incluso siglos— en descomponerse.
               </p>
-              <article>
+              <article class="imagen">
                 <img src="imagenes/arti.jpg" />
               </article>
               <h3>¿Qué hacer con las basuras?</h3>
@@ -115,14 +115,14 @@
 
               <h3>La separación más sencilla es la siguiente:</h3>
               <li>Vidrios: botellas, envases de vidrio.</li>
-              <article>
+              <article class="imagen">
                 <img src="imagenes/clasif%201.PNG" />
               </article>
               <li>
                 Plásticos: bolsas, envolturas de alimentos y recipientes de
                 elementos de aseo del hogar.
               </li>
-              <article>
+              <article class="imagen">
                 <img src="imagenes/clasif%202.PNG" />
               </article>
               <li>
@@ -130,7 +130,7 @@
                 aceite y combustibles. Objetos viejos como llaves, candados,
                 herramientas, ollas deterioradas.
               </li>
-              <article>
+              <article class="imagen">
                 <img src="imagenes/clasif%203.PNG" />
               </article>
               <li>
@@ -141,7 +141,7 @@
                 quemar ni enterrar ya que contaminan el suelo, el agua y el
                 aire.
               </li>
-              <article>
+              <article class="imagen">
                 <img src="imagenes/clasif%204.PNG" />
               </article>
 
