--- a/A_RECICLAR/index.html
+++ b/A_RECICLAR/index.html
@@ -55,6 +55,9 @@
             siglos— en descomponerse.
           </p>
           <a href="Leer.html">Leer más</a>
+          <div class="banner__boton">
+            <a href="#Bienvenidos" class="boton" id="scrollBtn">Ir a la sección siguiente</a>
+          </div>
         </div>
       </section>
       <section id="Bienvenidos">
@@ -185,5 +188,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/index.js"></script>
   </body>
 </html>
