--- a/A_RECICLAR/Contacto.html
+++ b/A_RECICLAR/Contacto.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="css/fontello.css" />
     <link rel="stylesheet" href="css/estilo.css" />
+
   </head>
   <body id="con">
     <header>
@@ -35,7 +36,7 @@
         </nav>
       </div>
     </header>
-    <form method="POST" action="enviar_correo.php">
+    <form method="POST">
       <label for="nombre">Nombre:</label>
       <input type="text" name="nombre" id="nombre" required />
 
@@ -50,6 +51,10 @@
 
       <input type="submit" value="Enviar" />
     </form>
+
+    <div id="confirmacion"></div>
+
+
     <footer id="contact">
       <div class="contenedor">
         <p class="copy">A'RECICLAR &copy; 2019</p>
@@ -77,5 +82,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/contacto.js"></script>
   </body>
 </html>
