Implementando Proyecto Final en el portafolio

--- a/A_RECICLAR/Alcance.html
+++ b/A_RECICLAR/Alcance.html
@@ -39,6 +39,7 @@
           <a href="Acerca.html">Acerca</a>
 
           <a href="Contacto.html">Contacto</a>
+          <a href="../index.html">Portafolio</a>
 
           <a href="#"
             ><p id="encima">Próximamente Disponible</p>
