--- a/A_RECICLAR/Leer.html
+++ b/A_RECICLAR/Leer.html
@@ -28,6 +28,7 @@
           <a href="Proyecto.html">Proyecto</a>
           <a href="Acerca.html">Acerca</a>
           <a href="Contacto.html">Contacto</a>
+          <a href="../index.html">Portafolio</a>
           <a href="#" target="_blank"
             ><p id="encima">Próximamente Disponible</p>
             <p>(Sólo para Dispositivos Móviles)</p></a
