--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
               <li><a href="reto.html">Reto News Web</a></li>
               <li><a href="snackConference.html">Snack Conference 2022</a></li>
               <li><a href="apiFetch.html">Api Fetch</a></li>
+              <li><a href="A_RECICLAR/index.html">Proyecto Final</a></li>
             </ul>
           </div>
         </div>
