--- a/A_RECICLAR/index.html
+++ b/A_RECICLAR/index.html
@@ -32,6 +32,7 @@
           <a href="Proyecto.html">Proyecto</a>
           <a href="Acerca.html">Acerca</a>
           <a href="Contacto.html">Contacto</a>
+          <a href="../index.html">Portafolio</a>
           <a href="#"
             ><p id="encima">Próximamente Disponible</p>
             <p>(Sólo para Dispositivos Móviles)</p></a
