Agregando estilo al portafolio

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <li>Email: julianvl.2003@gmail.com</li>
         <li>
           Github:
-          <a href="https://github.com/Julio937" target="_blank">Julio937</a>
+          <a href="https://github.com/Julio937" target="_blank">Julio937  👈</a>
         </li>
         <li>
           Neocities:
-          <a href="https://programacionweb937.neocities.org" target="_blank">Neocities</a>
+          <a href="https://programacionweb937.neocities.org" target="_blank">Neocities  👈</a>
         </li>
       </ul>
     </header>
@@ -51,18 +51,18 @@
                 <a
                   href="https://www.figma.com/file/E722z3JXhbjyvZ3VkIGTwR/Untitled?node-id=0%3A1&t=BpROyvFZb5rPezwi-1"
                   target="_blank"
-                  >Diseño hoja de vida</a
+                  >Diseño hoja de vida  👈</a
                 >
               </li>
               <li><a
                 href="https://www.figma.com/file/E722z3JXhbjyvZ3VkIGTwR/Untitled?node-id=0%3A1&t=BpROyvFZb5rPezwi-1"
                 target="_blank"
-                >Diseño Portafolio</a</li>
+                >Diseño Portafolio  👈</a</li>
               <li>
                 <a 
                 href="https://www.figma.com/file/ByC1O30dMrTyEU9kmONNac/Snack-Conference-2022?type=design&node-id=0%3A1&t=V7hyDNr2SiQhKGSs-1" 
                 target="_blank"
-                >Diseño Snack Conference</a
+                >Diseño Snack Conference  👈</a
                 >
               </li>
             </ul>
@@ -70,28 +70,28 @@
           <div class="article">
             <h3>Consultas</h3>
             <ul>
-              <li><a href="consulta1.html">Consulta 1</a></li>
-              <li><a href="consulta2.html">Consulta 2</a></li>
-              <li><a href="consulta3.html">Consulta 3</a></li>
+              <li><a href="consulta1.html">Consulta 1  👈</a></li>
+              <li><a href="consulta2.html">Consulta 2  👈</a></li>
+              <li><a href="consulta3.html">Consulta 3  👈</a></li>
             </ul>
           </div>
           <div class="article">
             <h3>Talleres</h3>
             <ul>
-              <li><a href="tabla.html">Tabla,formularios y multimedia</a></li>
-              <li><a href="hojadevida.html">Hoja De Vida</a></li>
-              <li><a href="disenoresponsive3.html">Responsive</a></li>
-              <li><a href="ejerciciosJS.html">Ejercicio JS</a></li>
-              <li><a href="catalogo.html">Taller Api Fetch</a></li>
+              <li><a href="tabla.html">Tabla,formularios y multimedia  👈</a></li>
+              <li><a href="hojadevida.html">Hoja De Vida  👈</a></li>
+              <li><a href="disenoresponsive3.html">Responsive  👈</a></li>
+              <li><a href="ejerciciosJS.html">Ejercicio JS  👈</a></li>
+              <li><a href="catalogo.html">Taller Api Fetch  👈</a></li>
             </ul>
           </div>
           <div class="article">
             <h3>Retos</h3>
             <ul>
-              <li><a href="reto.html">Reto News Web</a></li>
-              <li><a href="snackConference.html">Snack Conference 2022</a></li>
-              <li><a href="apiFetch.html">Api Fetch</a></li>
-              <li><a href="A_RECICLAR/index.html">Proyecto Final</a></li>
+              <li><a href="reto.html">Reto News Web  👈</a></li>
+              <li><a href="snackConference.html">Snack Conference 2022  👈</a></li>
+              <li><a href="apiFetch.html">Api Fetch  👈</a></li>
+              <li><a href="A_RECICLAR/index.html">Proyecto Final  👈</a></li>
             </ul>
           </div>
         </div>
